[tool.poetry]
name = "llmatex"
version = "0.1.0"
description = "CLI program for converting natural language text to LaTeX"
authors = ["trungle15"]
readme = "README.md"
packages = [{include = "llmatex"}]

[tool.poetry.dependencies]
python = "^3.9"
rich = "^13.7.0"
groq = "^0.9.0"
matplotlib = "^3.9.1"

llama_cpp_python = { version = "^0.2.82", optional = true }
torch = { version = "^2.3.1", optional = true }
transformers = { version = "^4.42.3", optional = true }
pynput = "^1.7.7"
pyperclip = "^1.9.0"
sympy = "^1.13.1"

[tool.poetry.extras]
local = [
    "llama_cpp_python",
    "torch",
    "transformers"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
llmatex = "llmatex.main:main"
